--- a/pelican/content/2015cphww4.md
+++ b/pelican/content/2015cphww4.md
@@ -15,3 +15,5 @@ Summary: 作業W4摘要
 [作業一投影片](simplest2.html){:target="_blank"}
 
 
+<img src="https://copy.com/hYbOzjFFyFVoaX0W"width="450"height="450">
+
