--- a/pelican/content/2015cphww1.md
+++ b/pelican/content/2015cphww1.md
@@ -4,7 +4,7 @@ Modified: 2015-11-03 11:41
 Category: Python
 Tags: pelican, publishing
 Slug: 2015cp_hw_w1
-Authors: coursemdetw
+Authors: 40323243
 Summary: 作業一摘要
 以下為作業一內容
 
