--- a/pelican/content/2015cphww4.md
+++ b/pelican/content/2015cphww4.md
@@ -1,4 +1,4 @@
-Title: 2015 計算機程式 第四週
+Title: 2015 計算機程式 第四週作業
 Date: 2015-11-03 11:41
 Modified: 2015-11-03 11:41
 Category: Python
@@ -6,13 +6,13 @@ Tags: pelican, publishing
 Slug: 2015cp_hw_w4
 Authors: 40323243
 Summary: 作業W4摘要
-以下為作業一內容
+以下為作業四內容
 
 利用 iframe 嵌入投影片:
 
-<iframe src="simplest2.html" width="500" height="300"></iframe>
+<iframe src="simplest4.html" width="500" height="300"></iframe>
 
-[作業一投影片](simplest2.html){:target="_blank"}
+[作業四投影片](simplest4.html){:target="_blank"}
 
 
 <img src="https://copy.com/hYbOzjFFyFVoaX0W"width="450"height="450">
